--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,113 +1,71 @@
-name: RDP
+<#
+  Title: Secure RDP + Tailscale Setup (2025 Version)
+  Author: ChatGPT (for Hitesh)
+  Works On: Windows 10 / 11 / Server 2019+ (Admin required)
+  Purpose: Enables RDP, creates secure user, installs & connects Tailscale
+#>
 
-on:
-  workflow_dispatch:
+Write-Host "`n=== Starting Secure RDP + Tailscale Setup ===`n"
 
-jobs:
-  secure-rdp:
-    runs-on: windows-latest
-    timeout-minutes: 3600
+# 1️⃣ Enable Remote Desktop
+Write-Host "🔧 Enabling Remote Desktop..."
+Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
+    -Name "fDenyTSConnections" -Value 0 -Force
+netsh advfirewall firewall set rule group="remote desktop" new enable=Yes
+Write-Host "✅ RDP enabled successfully.`n"
 
-    steps:
-      - name: Configure Core RDP Settings
-        run: |
-          # Enable Remote Desktop and disable Network Level Authentication (if needed)
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-                             -Name "fDenyTSConnections" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                             -Name "UserAuthentication" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                             -Name "SecurityLayer" -Value 0 -Force
+# 2️⃣ Create Secure RDP User
+Write-Host "👤 Creating RDP User with strong password..."
 
-          # Remove any existing rule with the same name to avoid duplication
-          netsh advfirewall firewall delete rule name="RDP-Tailscale"
-          
-          # For testing, allow any incoming connection on port 3389
-          netsh advfirewall firewall add rule name="RDP-Tailscale" `
-            dir=in action=allow protocol=TCP localport=3389
+Add-Type -AssemblyName System.Security
 
-          # (Optional) Restart the Remote Desktop service to ensure changes take effect
-          Restart-Service -Name TermService -Force
+$charset = @{
+    upper = [char[]](65..90)
+    lower = [char[]](97..122)
+    num   = [char[]](48..57)
+    sym   = ([char[]](33..47) + [char[]](58..64) + [char[]](91..96) + [char[]](123..126))
+}
 
-      - name: Create RDP User with Secure Password
-        run: |
-          Add-Type -AssemblyName System.Security
-          $charSet = @{
-              Upper   = [char[]](65..90)      # A-Z
-              Lower   = [char[]](97..122)     # a-z
-              Number  = [char[]](48..57)      # 0-9
-              Special = ([char[]](33..47) + [char[]](58..64) +
-                         [char[]](91..96) + [char[]](123..126)) # Special characters
-          }
-          $rawPassword = @()
-          $rawPassword += $charSet.Upper | Get-Random -Count 4
-          $rawPassword += $charSet.Lower | Get-Random -Count 4
-          $rawPassword += $charSet.Number | Get-Random -Count 4
-          $rawPassword += $charSet.Special | Get-Random -Count 4
-          $password = -join ($rawPassword | Sort-Object { Get-Random })
-          $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
-          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
-          
-          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
-          
-          if (-not (Get-LocalUser -Name "RDP")) {
-              Write-Error "User creation failed"
-              exit 1
-          }
+$pwd = -join ((($charset.upper + $charset.lower + $charset.num + $charset.sym) | Get-Random -Count 14))
+$securePwd = ConvertTo-SecureString $pwd -AsPlainText -Force
+$user = "RDPUser"
 
-      - name: Install Tailscale
-        run: |
-          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
-          $installerPath = "$env:TEMP\tailscale.msi"
-          
-          Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
-          Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
-          Remove-Item $installerPath -Force
+if (-not (Get-LocalUser -Name $user -ErrorAction SilentlyContinue)) {
+    New-LocalUser -Name $user -Password $securePwd -AccountNeverExpires
+    Add-LocalGroupMember -Group "Administrators" -Member $user
+    Add-LocalGroupMember -Group "Remote Desktop Users" -Member $user
+    Write-Host "✅ User '$user' created successfully."
+} else {
+    Write-Host "ℹ User '$user' already exists."
+}
 
-      - name: Establish Tailscale Connection
-        run: |
-          # Bring up Tailscale with the provided auth key and set a unique hostname
-          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
-          
-          # Wait for Tailscale to assign an IP
-          $tsIP = $null
-          $retries = 0
-          while (-not $tsIP -and $retries -lt 10) {
-              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
-              Start-Sleep -Seconds 5
-              $retries++
-          }
-          
-          if (-not $tsIP) {
-              Write-Error "Tailscale IP not assigned. Exiting."
-              exit 1
-          }
-          echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-      
-      - name: Verify RDP Accessibility
-        run: |
-          Write-Host "Tailscale IP: $env:TAILSCALE_IP"
-          
-          # Test connectivity using Test-NetConnection against the Tailscale IP on port 3389
-          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
-          if (-not $testResult.TcpTestSucceeded) {
-              Write-Error "TCP connection to RDP port 3389 failed"
-              exit 1
-          }
-          Write-Host "TCP connectivity successful!"
+Write-Host "Username: $user"
+Write-Host "Password: $pwd`n"
 
-      - name: Maintain Connection
-        run: |
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Address: $env:TAILSCALE_IP"
-          Write-Host "Username: RDP"
-          Write-Host "Password: $(echo $env:RDP_CREDS)"
-          Write-Host "==================`n"
-          
-          # Keep runner active indefinitely (or until manually cancelled)
-          while ($true) {
-              Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
-              Start-Sleep -Seconds 300
-          }
+# 3️⃣ Install Tailscale (latest stable)
+Write-Host "🌐 Installing Tailscale..."
+$tailscaleUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-latest-amd64.msi"
+$tempPath = "$env:TEMP\tailscale.msi"
+Invoke-WebRequest -Uri $tailscaleUrl -OutFile $tempPath -UseBasicParsing
+Start-Process msiexec.exe -ArgumentList "/i "$tempPath" /quiet /norestart" -Wait
+Remove-Item $tempPath -Force
+Write-Host "✅ Tailscale installed.`n"
+
+# 4️⃣ Sign in to Tailscale
+Write-Host "🔑 Signing in to Tailscale..."
+& "$env:ProgramFiles\Tailscale\tailscale.exe" up
+
+Write-Host "`n👉 Open the link shown above in your browser to log in."
+Write-Host "Once logged in, you’ll see your system in your Tailscale Admin Console."
+Write-Host "`nAfter that, run this to check your IP:"
+Write-Host "  tailscale ip -4"
+Write-Host "`nUse that IP to connect via RDP (mstsc).`n"
+
+# 5️⃣ Final Output
+Write-Host "============================"
+Write-Host "✅ Setup Complete!"
+Write-Host "RDP Username : $user"
+Write-Host "RDP Password : $pwd"
+Write-Host "Check Tailscale IP : tailscale ip -4"
+Write-Host "============================`n"
+
